# notes-app

./: LICENSE  README.md
compute-embeddings-function/: main.py  requirements.txt
expand-context/: Dockerfile  README.md  pyproject.toml
expand-context/app/: server.py
retrieve-notes/: README.md  pyproject.toml
retrieve-notes/app/: server.py
